src/codata_constants_2014_capi.f90


type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2014") ::&
capi_15_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "i", "n", "v", &
"e", "r", "s", "e", " ", "m", "e", "t", "e", "r", &
" ", "r", "e", "l", "a", "t", "i", "o", "n", "s", &
"h", "i", "p", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2014%value, &
ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2014%uncertainty, &
[ &
"m", "^", "-", "1", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2014") ::&
capi_16_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "j", "o", "u", &
"l", "e", " ", "r", "e", "l", "a", "t", "i", "o", &
"n", "s", "h", "i", "p", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2014%value, &
ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2014%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2014") ::&
capi_17_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "k", "e", "l", &
"v", "i", "n", " ", "r", "e", "l", "a", "t", "i", &
"o", "n", "s", "h", "i", "p", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2014%value, &
ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2014%uncertainty, &
[ &
"K", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2014") ::&
capi_18_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "k", "i", "l", &
"o", "g", "r", "a", "m", " ", "r", "e", "l", "a", &
"t", "i", "o", "n", "s", "h", "i", "p", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2014%value, &
ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2014%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2014") ::&
capi_19_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "1", "s", "t", " ", "h", &
"y", "p", "e", "r", "p", "o", "l", "a", "r", "i", &
"z", "a", "b", "i", "l", "i", "t", "y", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2014%value, &
ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2014%uncertainty, &
[ &
"C", "^", "3", " ", "m", "^", "3", " ", "J", "^", &
"-", "2", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2014") ::&
capi_20_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "2", "n", "d", " ", "h", &
"y", "p", "e", "r", "p", "o", "l", "a", "r", "i", &
"z", "a", "b", "i", "l", "i", "t", "y", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2014%value, &
ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2014%uncertainty, &
[ &
"C", "^", "4", " ", "m", "^", "4", " ", "J", "^", &
"-", "3", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ACTION_2014") ::&
capi_21_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "a", "c", "t", "i", "o", &
"n", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ACTION_2014%value, &
ATOMIC_UNIT_OF_ACTION_2014%uncertainty, &
[ &
"J", " ", "s", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_CHARGE_2014") ::&
capi_22_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "c", "h", "a", "r", "g", &
"e", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_CHARGE_2014%value, &
ATOMIC_UNIT_OF_CHARGE_2014%uncertainty, &
[ &
"C", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_CHARGE_DENSITY_2014") ::&
capi_23_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "c", "h", "a", "r", "g", &
"e", " ", "d", "e", "n", "s", "i", "t", "y", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_CHARGE_DENSITY_2014%value, &
ATOMIC_UNIT_OF_CHARGE_DENSITY_2014%uncertainty, &
[ &
"C", " ", "m", "^", "-", "3", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_CURRENT_2014") ::&
capi_24_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "c", "u", "r", "r", "e", &
"n", "t", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_CURRENT_2014%value, &
ATOMIC_UNIT_OF_CURRENT_2014%uncertainty, &
[ &
"A", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2014") ::&
capi_25_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "l", "e", "c", "t", &
"r", "i", "c", " ", "d", "i", "p", "o", "l", "e", &
" ", "m", "o", "m", ".", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2014%value, &
ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2014%uncertainty, &
[ &
"C", " ", "m", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ELECTRIC_FIELD_2014") ::&
capi_26_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "l", "e", "c", "t", &
"r", "i", "c", " ", "f", "i", "e", "l", "d", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ELECTRIC_FIELD_2014%value, &
ATOMIC_UNIT_OF_ELECTRIC_FIELD_2014%uncertainty, &
[ &
"V", " ", "m", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2014") ::&
capi_27_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "l", "e", "c", "t", &
"r", "i", "c", " ", "f", "i", "e", "l", "d", " ", &
"g", "r", "a", "d", "i", "e", "n", "t", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2014%value, &
ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2014%uncertainty, &
[ &
"V", " ", "m", "^", "-", "2", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2014") ::&
capi_28_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "l", "e", "c", "t", &
"r", "i", "c", " ", "p", "o", "l", "a", "r", "i", &
"z", "a", "b", "i", "l", "i", "t", "y", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2014%value, &
ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2014%uncertainty, &
[ &
"C", "^", "2", " ", "m", "^", "2", " ", "J", "^", &
"-", "1", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2014") ::&
capi_29_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "l", "e", "c", "t", &
"r", "i", "c", " ", "p", "o", "t", "e", "n", "t", &
"i", "a", "l", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2014%value, &
ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2014%uncertainty, &
[ &
"V", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
